artifacthub/library/general/gpuworkloadresources/1.0.0/samples/gpu-pod-gpu-request-missing/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sGpuWorkloadResources
metadata:
  name: require-gpu-workload-resources
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
